creditas-sf/force-app/main/default/objects/Activity/fields/EndOfAnalysis__c.field-meta.xml
<CustomField>
    <fullName>EndOfAnalysis__c</fullName>
    <label>Fim da análise</label>
    <type>DateTime</type>
</CustomField>