creditas-sf/force-app/main/default/objects/Activity/fields/EndOfValidation__c.field-meta.xml
<CustomField>
    <fullName>EndOfValidation__c</fullName>
    <label>Fim da validação</label>
    <type>DateTime</type>
</CustomField>