creditas-sf/force-app/main/default/objects/Activity/fields/MeetingConfirmation__c.field-meta.xml
<CustomField>
    <fullName>MeetingConfirmation__c</fullName>
    <description>Campo que indica se foi feito um contato com o Deal para confirmar a visita.

Campo será utilizado em Automação que irá atualizar o Produto de Interesse relacionado e/ou criar outras Tarefas relacionadas a Negociação.</description>
    <inlineHelpText>Campo que indica se foi feito um contato com o Deal para confirmar a visita.

Campo será utilizado em Automação que irá atualizar o Produto de Interesse relacionado e/ou criar outras Tarefas relacionadas a Negociação.</inlineHelpText>
    <label>Visita confirmada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoConfirmation</valueSetName>
    </valueSet>
</CustomField>