creditas-sf/force-app/main/default/objects/Activity/fields/Processos_da_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Processos_da_Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Processos da Oportunidade</label>
    <referenceTo>OpportunityProcess__c</referenceTo>
    <relationshipLabel>Tarefas</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>