creditas-sf/force-app/main/default/objects/Activity/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Tipo de produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductType</valueSetName>
    </valueSet>
</CustomField>