creditas-sf/force-app/main/default/objects/Activity/fields/SuccessfulContact__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulContact__c</fullName>
    <description>Identifica se a tentativa de contato com o Deal foi bem-sucedida / concluída ou se o Deal não foi localizado na tentativa de contato.

Campo será utilizado em Automação que irá atualizar o Deal relacionado e/ou criar outras Tarefas relacionadas a Negociação.</description>
    <inlineHelpText>Identifica se a tentativa de contato com o Deal foi bem-sucedida / concluída ou se o Deal não foi localizado na tentativa de contato.

Campo será utilizado em Automação que irá atualizar o Deal relacionado e/ou criar outras Tarefas relacionadas a Negociação.</inlineHelpText>
    <label>Contato com sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoConfirmation</valueSetName>
    </valueSet>
</CustomField>