creditas-sf/force-app/main/default/objects/Activity/fields/TaskDateTime__c.field-meta.xml
<CustomField>
    <fullName>TaskDateTime__c</fullName>
    <description>Data/hora da tarefa</description>
    <label>Data/hora da tarefa</label>
    <type>DateTime</type>
</CustomField>