creditas-sf/force-app/main/default/objects/Activity/fields/TaskDetails__c.field-meta.xml
<CustomField>
    <fullName>TaskDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Details</label>
    <referenceTo>TaskDetails__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>