creditas-sf/force-app/main/default/objects/Activity/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Tipo da Tarefa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validar Emissão da Minuta</fullName>
            </value>
            <value>
                <fullName>Condicionante de Fechamento para Emissão</fullName>
            </value>
            <value>
                <fullName>Condicionante de Formalização para Emissão</fullName>
            </value>
            <value>
                <fullName>Adiantar Minuta</fullName>
            </value>
            <value>
                <fullName>Confirmar Valores</fullName>
            </value>
            <value>
                <fullName>Atualizar Proposta Final de Crédito</fullName>
            </value>
            <value>
                <fullName>Pendência de Emissão de Fechamento</fullName>
            </value>
            <value>
                <fullName>Pendência de Emissão de Formalização</fullName>
            </value>
            <value>
                <fullName>Pendência de Emissão e Operações Cartorárias</fullName>
            </value>
            <value>
                <fullName>Pendência de Emissão de Jurídico</fullName>
            </value>
            <value>
                <fullName>Pendência de Emissão de Crédito</fullName>
            </value>
            <value>
                <fullName>Pendência de Emissão de Risco Imobiliário</fullName>
            </value>
            <value>
                <fullName>Emitir Minuta</fullName>
            </value>
            <value>
                <fullName>Conferir Minuta</fullName>
            </value>
            <value>
                <fullName>Validar Minuta com Credor</fullName>
            </value>
            <value>
                <fullName>Enviar Minuta Rascunho para o Cliente</fullName>
            </value>
            <value>
                <fullName>Ajustar Minuta</fullName>
            </value>
            <value>
                <fullName>Liberar Minuta Final</fullName>
            </value>
            <value>
                <fullName>Formalização - Nova proposta</fullName>
            </value>
            <value>
                <fullName>Formalização - Em análise</fullName>
            </value>
            <value>
                <fullName>Formalização - Pendência</fullName>
            </value>
            <value>
                <fullName>Pendência OPS</fullName>
            </value>
            <value>
                <fullName>Contrato gerado</fullName>
            </value>
            <value>
                <fullName>Proposta descartada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>